# community-data-files

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  checklog-odoo.cfg
.github/workflows/: test.yml
account_tax_unece/: README.rst  __manifest__.py
account_tax_unece/static/description/: index.html
base_bank_from_iban/: README.rst  __manifest__.py
base_bank_from_iban/i18n/: base_bank_from_iban.pot
base_bank_from_iban/static/description/: index.html
base_unece/: README.rst
base_unece/i18n/: tr.po
base_unece/static/description/: index.html
l10n_eu_nace/migrations/16.0.1.0.0/: pre-migration.py
l10n_eu_product_adr/i18n/: de.po  fr.po  it.po  l10n_eu_product_adr.pot  nl.po
l10n_eu_product_adr_dangerous_goods/i18n/: it.po
product_fao_fishing/: README.rst
product_fao_fishing/static/description/: index.html
setup/_metapackage/: pyproject.toml
